--- a/smart parking/package.json
+++ b/smart parking/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongodb": "^4.2.2"
   },
