--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-smart parking/node_modules/
-raspberry pi/.env
-smart parking/.env
+smart_parking/node_modules/
+raspberry_pi/.env
+smart_parking/.env
